compiler/tests/en/errors/pub_private.salam
// EXPECT: E017
import pl "../general/_publib.salam"

func main:
    println (pl.Secret())
end
